[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/items/door.png" type="Texture" id=1]
[ext_resource path="res://entities/items/door/door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1.5, 15.5 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "close",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.5, 15.5 )

[node name="Door" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 2
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 5 )

[node name="Animated" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "close"
playing = true

[node name="Check_interaction" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="Check_interaction"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Check_interaction" to="." method="_on_Check_interaction_body_entered"]
[connection signal="body_exited" from="Check_interaction" to="." method="_on_Check_interaction_body_exited"]
